# kafka-to-websocket

./: Cargo.toml  Dockerfile  LICENSE-MIT  README.md  docker-compose.yml
.github/workflows/: rust.yml
src/: Trajectory.rs  cache.rs  config.rs  kafka.rs  main.rs  websocket.rs
src/custom_schema/: mod.rs  schema.rs
