[package]
name = "kafka_ws"
version = "0.1.0"
authors = ["Stefan Eisl <seisl.mmt-m2020@fh-salzburg.ac.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

avro-rs = "0.13.0"
schema_registry_converter = { version = "2.0.2", features = ["avro"] }
rdkafka = { version = "0.26", features = ["cmake-build"] }
tokio = { version = "1.7.1", features = ["full"] }
futures = "0.3.15"
tokio-tungstenite = "*"
tungstenite = "0.13.0"
serde = "1.0.126"
serde_json = "1.0.64"