[package]
name = "kafka_ws"
version = "0.1.0"
authors = ["Stefan Eisl <seisl.mmt-m2020@fh-salzburg.ac.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

avro-rs = "0.13.0"
schema_registry_converter = { version = "2.1.0", features = ["avro"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }


tokio = { version = "1.11.0", features = ["full"] }
futures = "0.3.17"


tokio-tungstenite = "*"

tungstenite = "0.15.0"
serde = "1.0.130"
serde_json = "1.0.67"

